feat: use Math.clamp for page and size validation in notification retrieval